ajuste tamanho da imagem

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
       <h2>O que é o Marco Zero</h2>
       <p>O Marco Zero é um monumento localizado no centro histórico da cidade de Recife, no estado de Pernambuco. É o ponto onde foi fundada a cidade, em 12 de março de 1537, pelo navegador português Duarte Coelho.</p>
-      <img src="/ProjetoRecife/assets/imgs/quadro-pintura-marco-zero-recife-quadro-recife-vista-aerea.jpg" alt="Foto do Marco Zero">
+      <img src="/ProjetoRecife/assets/imgs/quadro-pintura-marco-zero-recife-quadro-recife-vista-aerea.jpg" alt="Foto do Marco Zero" width="1200" height="500"> 
       <h2>Como visitar</h2>
       <p>O Marco Zero é uma atração turística popular em Recife e pode ser facilmente acessado de transporte público ou a pé, se você estiver hospedado em um hotel próximo. Além disso, existem muitos bares e restaurantes nas proximidades, oferecendo comida e bebida típicas da região.</p>
     </main>
