--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <p>O Marco Zero é uma atração turística popular em Recife e pode ser facilmente acessado de transporte público ou a pé, se você estiver hospedado em um hotel próximo. Além disso, existem muitos bares e restaurantes nas proximidades, oferecendo comida e bebida típicas da região.</p>
     </main>
     <footer>
-      <p>&copy; 2021 Recife: Marco Zero. Todos os direitos reservados.</p>
+      <p>&copy; 2023 Pontos turísticos Recife. Todos os direitos reservados.</p>
     </footer>
   </body>
 </html>
