--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     </header>
     <main>
       <h2>O que é o Marco Zero</h2>
-      <p>O Marco Zero é um monumento localizado no centro histórico da cidade de Recife, no estado de Pernambuco. É o ponto onde foi fundada a cidade, em 12 de março de 1537, pelo navegador português Duarte Coelho.</p>
-      <img src="/ProjetoRecife/assets/imgs/quadro-pintura-marco-zero-recife-quadro-recife-vista-aerea.jpg" alt="Foto do Marco Zero" width="1200" height="500"> 
-      <h2>Como visitar</h2>
-      <p>O Marco Zero é uma atração turística popular em Recife e pode ser facilmente acessado de transporte público ou a pé, se você estiver hospedado em um hotel próximo. Além disso, existem muitos bares e restaurantes nas proximidades, oferecendo comida e bebida típicas da região.</p>
+      <p>O Marco Zero foi onde a cidade literalmente começou. Localizado na Praça Rio Branco, é lá que se encontra o ponto inicial para a contagem das distâncias da cidade.</p>
+      <img src="/ProjetoRecife/assets/imgs/MarcoZero.jpg" alt="Foto do Marco Zero" width="1200" height="500"> 
+      <h3>Localização</h3>
+      <p>Av. Alfredo Lisboa - Recife, PE, 50030-150</p>
     </main>
     <footer>
+        <h3>Conheça outros pontos turísticos</h3><a href="Outrospontos.html"><b> Clickando aqui</b></a>
       <p>&copy; 2023 Pontos turísticos Recife. Todos os direitos reservados.</p>
     </footer>
   </body>
