--- a/Outrospontos.html
+++ b/Outrospontos.html
@@ -17,7 +17,7 @@
         e da riqueza do Brasil colonial, com muitos detalhes em ouro, madeiras trabalhadas e 
         pinturas sacras. Na verdade, a capela fica dentro do Convento e da Igreja de Santo 
         Antônio, onde também está o Museu de Arte Sacra. </p>
-        <img src="/ProjetoRecife/assets/imgs/CapelaDourada.jpg" alt="Foto da Capela Dourada" width="1200" height="500"> 
+        <img src="/imgs/CapelaDourada.jpg" alt="Foto da Capela Dourada" width="1200" height="500"> 
         <h2>Localização</h2>
         <p>Altura da rua Siqueira Campos, R. do Imperador Pedro II, S/N - Santo Antônio, Recife - PE, 50010-240</p>
       </section>
@@ -27,7 +27,7 @@
         <p>A Praia de Boa Viagem é a mais famosa da cidade, sempre muito movimentada e frequentada 
           por locais e turistas. O lugar oferece uma boa infraestrutura e conta com uma extensa 
           faixa de areia, bem convidativa para a prática de esportes. </p>
-          <img src="/ProjetoRecife/assets/imgs/BoaViagem.jpg" alt="Foto da Praia de Boa Viagem" width="1200" height="500">
+          <img src="/imgs/BoaViagem.jpg" alt="Foto da Praia de Boa Viagem" width="1200" height="500">
           <h2>Localização</h2>
           <p>Av. Boa Viagem, Recife - PE, 51021-400</p>
       </section>
