--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Recife: Marco Zero</title>
   </head>
   <body>
     <header>
-      <h1>Recife: Marco Zero</h1>
+      <h1 id="titulo">Recife: Marco Zero</h1>
     </header>
     <main>
       <h2>O que é o Marco Zero</h2>
       <p>O Marco Zero foi onde a cidade literalmente começou. Localizado na Praça Rio Branco, é lá que se encontra o ponto inicial para a contagem das distâncias da cidade.</p>
-      <img src="/ProjetoRecife/assets/imgs/MarcoZero.jpg" alt="Foto do Marco Zero" width="1200" height="500"> 
+      <img src="/imgs/MarcoZero.jpg" alt="Foto do Marco Zero" width="1200" height="500"> 
       <h3>Localização</h3>
       <p>Av. Alfredo Lisboa - Recife, PE, 50030-150</p>
     </main>
     <footer>
-        <h3>Conheça outros pontos turísticos</h3><a href="Outrospontos.html"><b> Clickando aqui</b></a>
+        <h3>Conheça outros pontos turísticos</h3><a href="Outrospontos.html"><b> Aperte aqui</b></a>
       <p>&copy; 2023 Pontos turísticos Recife. Todos os direitos reservados.</p>
     </footer>
   </body>
